# closure-core

./: .gitignore  Cargo.toml  README.md  REFACTORING_SUMMARY.md  SPRITE_API_REFACTORING_INSTRUCTIONS.md  SPRITE_API_REFACTORING_SUMMARY.md  SPRITE_REFACTORING_PLAN.md  SPRITE_STREAMING_INSTRUCTIONS.md  SPRITE_STREAMING_PLAN.md  SPRITE_STREAMING_SUMMARY.md  STOP_AFTER_OPTIMIZATION.md  parallel_results.csv
.claude/: settings.local.json
examples/: benchmark_count.rs  benchmark_stop_after.rs  benchmark_stop_after_large.rs  benchmark_streaming.rs
examples/common/: mod.rs
protocols/: claude-proposed-regression-fix.md  claude-wicked-bug-retrospective.md  increase-depth-plan.md  sprite-bias-assessment.md  sprite-improvements-retrospective.md  sprite-improvements.md
src/: count.rs  decimal_places.rs  distribution_finder.rs  grimmer.rs  lib.rs  main.rs  path.rs  sprite.rs  sprite_types.rs  utils.rs
