[package]
name = "closure-core"
version = "0.1.0"
authors = ["Lukas Jung jung-lukas@gmx.net"]
edition = "2021"
description = "CLOSURE: complete listing of original samples of underlying raw evidence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lhdjung/closure-core"
readme = "README.md"


[dependencies]
num = "0.4.3"
rayon = "1.8"


[[bin]]
name = "test-harness"
path = "src/bin/test-harness.rs"
required-features = ["test-harness"]


[features]
default = []
test-harness = ["dep:csv", "dep:indicatif"]

[dependencies.csv]
version = "1.3"
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true
