[package]
name = "closure-core"
version = "0.1.0"
authors = ["Lukas Jung jung-lukas@gmx.net"]
edition = "2021"
description = "CLOSURE: complete listing of original samples of underlying raw evidence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lhdjung/closure-core"
readme = "README.md"


[dependencies]
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.7"
num = "0.4.3"


[[bin]]
name = "test-harness"
path = "src/bin/test-harness.rs"
required-features = ["test-harness"]


[features]
default = []
test-harness = ["dep:csv"]

[dependencies.csv]
version = "1.3"
optional = true
