[package]
name = "closure-core"
version = "1.0.0"
authors = ["Lukas Jung jung-lukas@gmx.net"]
edition = "2021"
description = "CLOSURE: complete listing of original samples of underlying raw evidence"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lhdjung/closure-core"
readme = "README.md"


[dependencies]
arrow = "55.1.0"
num = "0.4.3"
parquet = "55.1.0"
bigdecimal = "0.4.8"
num-traits = "0.2.19"
rand = "0.9.1"
rayon = "1.8"
regex = "1.11.1"
statrs = "0.18.0"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0.12"


[[bin]]
name = "test-harness"
path = "src/bin/test-harness.rs"
required-features = ["test-harness"]


[features]
default = []
test-harness = ["dep:csv", "dep:indicatif"]

[dependencies.csv]
version = "1.3"
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true
